@@ -16,32 +16,32 @@ Hash: SHA256
 
 SHA1 8146267b09af8157aa67eb220b0b6ad3d5c61303 Build.PL
 SHA1 d0f2060d740ce428f14c47b7f9cc2c65bf66cd7b COPYING
-SHA1 f353d0dfa0e386bb59bbcac2ac84386ab48a9b45 Changelog
-SHA1 aab725d3ceafacba619988601b393aa3d20b543c MANIFEST
-SHA1 f37c0b41fa3f391ed62ad8a2ff2a468b714e7375 META.yml
+SHA1 3a54b87e35a5054b5763b588a57a56eb17b8b7ac Changelog
+SHA1 5b8d2906dbb6c04294f788abfd8a27ed3224393b MANIFEST
+SHA1 8dd9dbc8c7e57c42d9343d96616a4374f73f22cf META.yml
 SHA1 bbff2d44f9fa2c89eb7666e6154eec9e810de913 README
-SHA1 b12dcfd2306e578883cfe7c7a7438a76e16b0bca bin/db-ris
-SHA1 03e33665ee7672cea70fe1246c6a20ddb0b46c64 lib/Travel/Status/DE/DeutscheBahn.pm
-SHA1 c8d0ace3b66b6ded88ef1218065cadbc0a924ed5 lib/Travel/Status/DE/DeutscheBahn/Result.pm
+SHA1 917f2e3237520f39a077d23f8feae138104a7569 bin/db-ris
+SHA1 91ab8516822f473d2fe1803ed12d51723c038b48 lib/Travel/Status/DE/DeutscheBahn.pm
+SHA1 ff086ec9ce75a788d95d4e308100a88adfffd691 lib/Travel/Status/DE/DeutscheBahn/Result.pm
 SHA1 6cfaebdb4d57688b8ac50f3e840a99a48c15457b t/00-compile-pm.t
 SHA1 3adfc7da6082f15051da7fbda884723388738b61 t/01-compile-pl.t
 SHA1 fd251ffc56ca6e52020c906b61158f78b035679d t/10-pod-coverage.t
-SHA1 c4670a78a4d7cb9f742740dcddaf4d691150ac3c t/20-db.t
+SHA1 6e4cd6b1ee01c7ca0aa777cc963db54a40fc5e0d t/20-db.t
 SHA1 d406786e99f134d2dcf15a220370ca17693c5a93 t/in/essen.html
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.11 (GNU/Linux)
 
-iQIcBAEBCAAGBQJOQTm3AAoJEBANW/tRZuAFMW0P/3gheHyMA+opmzmojZ2kTO/D
-HieZQYsxdGxNVmiLo8GYKO46avRvrMs4e+AWEiOyqMkYOnAvnx/CUepiYiLCrX5/
-c0j6fa9/KB8b3/82b8jK1pKyO0nmoHWaQNb0UCd/aV5uIRk6ff5c7GtVcTiGmJzx
-VkF/tKvzsD1OD3JcAehqk48tN066LeHSgmsxEf8hVZJa9ZAWiNS1/ymR/qdfUhE6
-Ez4uCkD55aXytgTXgSlQZ+CRLKq2+PwGxVw4vmuL2X8PURyNvavkvOf/awaU52fi
-MOEuNYbe0VJcPB/oxzkQwY9OqNGyGuw521Et4xNB9N1/1Fuc4YnU04n34ZeTohdo
-jzRXBTxyuVmM+0c4bXKbHJW3q7MVbXs83yHWbyoHpPNCYXHRCEKJvzuunwaNjse9
-qJl9si7E30hyn6ugthWZejSlUpuzYnMhYc4cc6UlAackWcng+Hp4f2UoC9jBU9w6
-+dEV62/8SsHPwP4iQj1PY1qkFs1kS2d+c2uXPdszIysUN00YZK0pud2IydhrMDpf
-d8W6pkxshNmruvJfEAK2rISahHqp+VqJzBPXhdadvsrStYRbEMfye2Rverw6xzXS
-SaSl2cn5FmtE/gdAHehGXr0xY4V4L13AwTzEZPyyluHifox+dQHwrJ7+3WVUbcRn
-b4ZvGBbgALWMuzPCdo7b
-=A3wg
+iQIcBAEBCAAGBQJOY6tFAAoJEBANW/tRZuAF88YP/i2fQkxuzM979bVHaGzDgfqz
+7OfbKEgOjzSqTPvLWQ6HMfCZJ0d2ukQ8UWXWIIHjW27CAJl0+Qpuo1Jj6WYc07Ee
+vXjp2RoBzydcaAc1QQC8M70kFxHxcxWqtn9nrAFZ+rBWxaZAIBYy75iQrA9UC6HM
+QFdTn75RFdDIEvvv4QFAhXYwGp9ctcG8xqG8E3Z3F6xVTiwO7SoVcJiE0+8adTMo
+yg6wDHXhq4chkYXxBT2PCr0N/MjW2Y1nHmXMKKE8ZV5aBSAAYzPeblMISLtf3xQF
+sXm1ht0DqlwX6KA0drKLJYMmzp/x5hHqlRuzCwPyY0RL97cYsWGLRbOQ4ciKDWl+
+oRvaGLyJnSqgIhptgwh42ZZfurvsMvrdd0yOPjzXGj04jtrgYAALAsIbYR4SdEZV
+x9wsnqQUwBBf/xvl/udmrWnDXzoQ5bmcDVIuLx86xe7CYWQo6ryNwOvy3gQzru0W
+3+G2MghRpotfJxU+1tPxVmtHQXpajNH2TYNd7q6G0cXRbKDYSm+oOTHdARtcZVl9
+rcUn/elMmlpJk/LY6Ec2oqNXJDWZoOmqvIcokOf/cjnGYmVW3YYTX1f6T7QkIklp
++irHq/d3t/2bpd4OaYsWfZPOTrVRMoZfXKwvaXE+fhPjWd2D005qVtfEMA4L51T8
+wPGWg0mf9TFQIAVc8Zdp
+=3LVg
 -----END PGP SIGNATURE-----
