@@ -1,3 +1,15 @@
+Travel::Status::DE::DeutscheBahn 1.00 - Sun Sep 04 2011
+
+    [db-ris]
+    * Add --full-route option
+
+    [Travel::Status::DE::DeutscheBahn]
+    * Fix bug when receiving no platform numbers from the DB RIS
+
+    [Travel::Status::DE::DeutscheBahn::Result]
+    * Add route_timetable accessor containing station names and
+      their corresponding arrival times
+
 Travel::Status::DE::DeutscheBahn 0.05 - Tue Aug 09 2011
 
     [Travel::Status::DE::DeutscheBahn]
